--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </style>
 </head>
 <body>
+  <div class="qr-card">
   <div class="project">
     <div class="img_class">
       <img src="images/image-qr-code.png" alt="qr code to scan">
@@ -29,6 +30,7 @@
       <p class="main_text">Improve your front-end skills by building projects</p>
       <p class="scan_text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
+  </div>
   </div>
   
   <div class="attribution">
